# arithmetic-expressions

./: README.md  arithmetic-expressions.cabal
app/: Main.hs
src/: ArithmeticExpression.hs  ExpressionEvaluator.hs  Lib.hs
