cabal-version:          2.2
name:                   arithmetic-expressions
version:                0.1.0.0
description:            Please see the README on GitHub at <https://github.com/MorveN11/arithmetic-expressions#readme>
homepage:               https://github.com/MorveN11/arithmetic-expressions#readme
author:                 Manuel Morales
maintainer:             morales.patty.jose@gmail.com
copyright:              2024 Manuel Morales
license:                BSD-3-Clause
license-file:           LICENSE
build-type:             Simple
extra-source-files:     README.md

source-repository head
  type:                 git
  location:             https://github.com/MorveN11/arithmetic-expressions

common configuration
    ghc-options:        -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wmissing-home-modules
                        -Wpartial-fields
                        -Wredundant-constraints
    build-depends:      base >= 4.7 && < 5
    default-language:   Haskell2010

common executable-configuration
    ghc-options:        -threaded
                        -rtsopts
                        -with-rtsopts=-N
    build-depends:      arithmetic-expressions

library
  import:               configuration
  exposed-modules:      Lib
                        ArithmeticExpression
                        ExpressionEvaluator
  hs-source-dirs:       src

executable arithmetic-expressions-exe
  import:               configuration,
                        executable-configuration
  main-is:              Main.hs
  hs-source-dirs:       app

test-suite arithmetic-expressions-test
  import:               configuration,
                        executable-configuration
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test
